# vacation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
best_models/: vacation.sqlite3
vacation/: version.py
vacation/cli/: cli.py  cnn.py  dataset.py  optim.py  rf.py
vacation/data/: __init__.py  augmentation.py  augmentation_testing.ipynb  cross_validation_testing.ipynb  dataloader.py  dataset_creation.py  loader_testing.ipynb
vacation/evaluation/: optimization_results.py  visualizations.py
vacation/model/: __init__.py  network.py  random_forest.ipynb  random_forest.py
vacation/notebooks/: augmentation_testing.ipynb  cross_validation_testing.ipynb  data_preperation.ipynb  dataset_visualization.ipynb  evaluation.ipynb  evaluation_rf.ipynb  loader_testing.ipynb  matplotlibrc  memory_tests.ipynb  network_testing.ipynb  optimized_artifacts.ipynb  random_forest_testing.ipynb  training_testing.ipynb  visualization_testing.ipynb
vacation/scripts/: data_preperation.py  optimization.py  random_forest.py  training_test.py
