# This file was adapted from:
#   - pyvisgen (https://github.com/radionets-project/pyvisgen/blob/main/pyproject.toml)
#     Originally licensed under MIT License. Copyright (c) 2021 radionets-project.

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vacation"
dynamic = ["version"]
description = "Visual Galaxy Classification Using Convolutional Neural Networks"
readme = "README.md"
authors = [{ name = "Nick Trosky, Tom Groß" }]
maintainers = [
  { name = "Nick Trosky", email = "nick.trosky@tu-dortmund.de" },
  { name = "Tom Groß", email = "tom.gross@tu-dortmund.de" }
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "tqdm",
  "toml",
  "h5py",
  "jupyterlab",
  "torch",
  "scikit-learn",
  "scikit-image",
  "click",
  "pre-commit",
]

[project.scripts]

[tool.setuptools_scm]
write_to = "vacation/_version.py"

[tool.setuptools.packages.find]
where = ["."]
